--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    #RewriteBase /
+    RewriteBase /bsm-satba/
 
     #Removes access to the system folder by users.
     #Additionally this will allow you to create a System.php controller,
@@ -23,16 +23,3 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?/$1 [L]
 </IfModule>
-
-<IfModule !mod_rewrite.c>
-    # If we don't have mod_rewrite installed, all 404's
-    # can be sent to index.php, and everything works as normal.
-    # Submitted by: ElliotHaughin
-
-    ErrorDocument 404 /index.php
-</IfModule>  
-
-#Caching schema
-<FilesMatch "\.(jpg|css|png)$">
-    Header set Cache-Control "max-age=0"
-</FilesMatch>
