--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /nbproject/*
 .DS_Store
-
+*/config/development
+*/logs/log-*.php
+!*/logs/index.html
+*/cache/*
+!*/cache/index.html
+!*/cache/.htaccess
